Fixed elements visibility

--- a/src/app/startsurvey/startsurvey.page.scss
+++ b/src/app/startsurvey/startsurvey.page.scss
@@ -423,3 +423,7 @@ ion-content {
     --handle-background-checked: #eebb5c;
   }
 }
+
+.hideElement {
+  display: none;
+}
